--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div id="liePopup1" class="popup">
         <div class="popup-content bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700">
             <h3 class="text-xl font-bold mb-2">Hmm... MENTIRA!</h3>
-            <p class="mb-4">Você sabe que seu nome é Leticia Miranda!</p>
+            <p class="mb-4">Mentira!</p>
             <button id="lieOkBtn1" class="px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600">OK</button>
         </div>
     </div>
@@ -275,7 +275,7 @@
     <div id="liePopup2" class="popup">
         <div class="popup-content bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700">
             <h3 class="text-xl font-bold mb-2">Eita! Mentira...</h3>
-            <p class="mb-4">Claro que seu nome é Leticia Oliveira Miranda!</p>
+            <p class="mb-4">Errado! Eu sei que é você!!</p>
             <button id="lieOkBtn2" class="px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600">OK</button>
         </div>
     </div>
