--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <div class="flex justify-center">
-            <img src="https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Couple photo" class="couple-photo">
+            <img src="https://drive.google.com/uc?export=view&id=1kahsGZizbGUGdYxuusq5cthUfsBODmNG" alt="imagem personalizada" style="width: 100%; max-width: 300px;">
         </div>
 
         <div class="flex flex-col items-center md:items-start text-center md:text-left md:w-1/3">
