--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <div class="flex justify-center">
-            <img src="https://drive.google.com/uc?export=view&id=1kahsGZizbGUGdYxuusq5cthUfsBODmNG" alt="Couple photo" class="couple-photo">
+            <img src="https://postimg.cc/Jyb2dJJP" alt="Couple photo" class="couple-photo">
         </div>
 
         <div class="flex flex-col items-center md:items-start text-center md:text-left md:w-1/3">
