--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <div class="flex justify-center">
-            <img src="https://i.postimg.cc/1zT1Xrzh/Especial.jpg" alt="Couple photo" class="couple-photo">
+            <img src="https://i.postimg.cc/1zT1Xrzh/Especial.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Couple photo" class="couple-photo">
         </div>
 
         <div class="flex flex-col items-center md:items-start text-center md:text-left md:w-1/3">
