--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div id="finalPage" class="min-h-screen flex flex-col md:flex-row items-center justify-center p-8 gap-8 hidden final-page">
         <div class="flex flex-col items-center md:items-end text-center md:text-right md:w-1/3">
             <p class="text-xl md:text-2xl text-pink-800 mb-6 max-w-md">
-                "Eu nem imaginava o quão importante você se tornaria pra mim, e em pouco tempo percebi que você é simplesmente maravilhosa e é exatamente a pessoa que eu esperava conhecer, obrigado por ser você!!!" ❤️
+                "Obrigado "
             </p>
         </div>
 
@@ -243,7 +243,7 @@
 
         <div class="flex flex-col items-center md:items-start text-center md:text-left md:w-1/3">
             <p class="text-3xl md:text-4xl font-bold text-pink-600 mb-6">
-                "TE AMO MUITO!!" 💖
+                "Obrigado por ser essa pessoa incrível!!" 
             </p>
         </div>
     </div>
@@ -251,7 +251,7 @@
     <div id="errorPopup" class="popup">
         <div class="popup-content bg-red-100 border-l-4 border-red-500 text-red-700">
             <h3 class="text-xl font-bold mb-2">ERRADO!</h3>
-            <p class="mb-4">Só isso de beleza? Isso tá errado!!! 😠</p>
+            <p class="mb-4">Só isso? Isso tá errado!!! 😠</p>
             <button id="errorOkBtn" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">OK</button>
         </div>
     </div>
