--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 mb-2">Nível de beleza (0 a 10):</label>
+                    <label class="block text-gray-700 mb-2">Nível de Educação (0 a 10):</label>
                     <input type="number" id="beautyLevel" min="0" max="10" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-pink-500">
                 </div>
 
@@ -251,7 +251,7 @@
     <div id="errorPopup" class="popup">
         <div class="popup-content bg-red-100 border-l-4 border-red-500 text-red-700">
             <h3 class="text-xl font-bold mb-2">ERRADO!</h3>
-            <p class="mb-4">Só isso? Isso tá errado!!! 😠</p>
+            <p class="mb-4">Só? Isso tá errado!!! 😠</p>
             <button id="errorOkBtn" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">OK</button>
         </div>
     </div>
