--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Initial Screen -->
     <div id="initialScreen" class="min-h-screen flex flex-col items-center justify-center p-4">
         <div class="text-center mb-12">
-            <h1 class="text-3xl md:text-4xl font-bold text-pink-600 mb-4">ESSE É UM PRESENTE MUITO EXCLUSIVO E ESPECIAL</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-pink-600 mb-4">ESTE É UM PRESENTE MUITO EXCLUSIVO E ESPECIAL</h1>
             <p class="text-xl md:text-2xl text-pink-500">TEM CERTEZA QUE DESEJA ABRI-LO??</p>
         </div>
         
