--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 mb-2">Nível de beleza (0 a 10):</label>
+                    <label class="block text-gray-700 mb-2">Nivel de incrívelidade (inventei a palavra kkkkk) (0 a 10):</label>
                     <input type="number" id="beautyLevel" min="0" max="10" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-pink-500">
                 </div>
 
