--- a/index.html
+++ b/index.html
@@ -230,23 +230,28 @@
         </div>
     </div>
 
-    <div id="finalPage" class="min-h-screen flex flex-col md:flex-row items-center justify-center p-8 gap-8 hidden final-page">
-        <div class="flex flex-col items-center md:items-end text-center md:text-right md:w-1/3">
-            <p class="text-xl md:text-2xl text-pink-800 mb-6 max-w-md">
-                "Obrigado "
-            </p>
-        </div>
-
-        <div class="flex justify-center">
-            <img src="https://i.postimg.cc/1zT1Xrzh/Especial.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Couple photo" class="couple-photo">
-        </div>
-
-        <div class="flex flex-col items-center md:items-start text-center md:text-left md:w-1/3">
-            <p class="text-3xl md:text-4xl font-bold text-pink-600 mb-6">
-                "Obrigado por ser essa pessoa incrível!!" 
-            </p>
-        </div>
+    <div id="finalPage" class="min-h-screen flex flex-col items-center justify-center p-8 gap-8 final-page hidden">
+    <!-- Texto de Feliz Aniversário -->
+    <div class="text-center max-w-2xl">
+        <p class="text-3xl md:text-4xl font-bold text-pink-600 mb-6">
+            "Feliz Aniversário (1 dia atrasado, kkk). Eu quero aproveitar esse momento especial na sua vida e te agradecer por tudo o que você já fez por mim. Eu mudei positivamente depois
+            que te conheci. Eu aprendi a sorrir, superei meus medos e passei a ter esperanças de que ainda existem pessoas com um bom coração no mundo — pois você é uma. Aproveite intensamente esse momento
+            e guarde as boas memórias em seus pensamentos para sempre."
+        </p>
     </div>
+
+    <!-- Imagem -->
+    <div class="flex justify-center">
+        <img src="https://i.postimg.cc/1zT1Xrzh/Especial.jpg?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Couple photo" class="couple-photo">
+    </div>
+
+    <!-- Texto final -->
+    <div class="text-center max-w-md">
+        <p class="text-xl md:text-2xl text-pink-800">
+            "Tudo de Bom, continue sendo quem você sempre foi!"
+        </p>
+    </div>
+</div>
 
     <div id="errorPopup" class="popup">
         <div class="popup-content bg-red-100 border-l-4 border-red-500 text-red-700">
